--- a/hacking-with-react/hwr/package.json
+++ b/hacking-with-react/hwr/package.json
@@ -25,9 +25,11 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "chance": "^1.0.2",
     "history": "^2.1.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
-    "react-router": "^2.4.0"
+    "react-router": "^2.4.0",
+    "superagent": "^1.8.3"
   }
 }
