--- a/hacking-with-react/hwr/package.json
+++ b/hacking-with-react/hwr/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "",
@@ -15,11 +15,26 @@
       "react"
     ]
   },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils",
+      "<rootDir>/node_modules/fbjs"
+    ]
+  },
   "devDependencies": {
     "babel-core": "^6.7.7",
+    "babel-eslint": "^6.0.4",
+    "babel-jest": "^12.0.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "eslint": "^2.9.0",
+    "eslint-plugin-react": "^5.0.1",
+    "jest-cli": "^12.0.2",
+    "react-addons-test-utils": "^15.0.2",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
