--- a/hacking-with-react/hwr/package.json
+++ b/hacking-with-react/hwr/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose"
+    "test": "jest --verbose",
+    "lint": "eslint src"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +33,9 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "eslint": "^2.9.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-import": "^1.6.1",
+    "eslint-plugin-jsx-a11y": "^1.0.4",
     "eslint-plugin-react": "^5.0.1",
     "jest-cli": "^12.0.2",
     "react-addons-test-utils": "^15.0.2",
