--- a/movie-finder/package.json
+++ b/movie-finder/package.json
@@ -1,60 +1,26 @@
 {
-  "name": "react-hacking-with-react-kickstarter",
+  "name": "movie-finder",
   "version": "1.0.0",
-  "description": "A project skeleton to start creating small React applications with the Hacking with React style",
+  "description": "A simple movie finder made with React",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "test": "jest --verbose",
-    "lint": "eslint src"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Zyst/react-hacking-with-react-kickstarter.git"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "react",
-    "kickstarter",
-    "hacking with react"
+    "React"
   ],
   "author": "Zyst",
   "license": "MIT",
-  "babel": {
-    "presets": [
-      "es2015",
-      "react"
-    ]
-  },
-  "bugs": {
-    "url": "https://github.com/Zyst/react-hacking-with-react-kickstarter/issues"
-  },
-  "homepage": "https://github.com/Zyst/react-hacking-with-react-kickstarter#readme",
-  "jest": {
-    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
-    "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/react",
-      "<rootDir>/node_modules/react-dom",
-      "<rootDir>/node_modules/react-addons-test-utils",
-      "<rootDir>/node_modules/fbjs"
-    ]
-  },
   "devDependencies": {
-    "babel-core": "^6.8.0",
-    "babel-jest": "^12.0.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "jest-cli": "^12.0.2",
-    "react-addons-test-utils": "^15.0.2",
-    "react-hot-loader": "^1.3.0",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "browserify": "*",
+    "flux": "*",
+    "gulp": "*",
+    "reactify": "*",
+    "vinyl-source-stream": "*",
+    "object-assign": "*"
   },
   "dependencies": {
-    "history": "^2.1.1",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "react-router": "^2.4.0"
+    "react": "*",
+    "react-dom": "*"
   }
 }
