--- a/contact-list-firebase/package.json
+++ b/contact-list-firebase/package.json
@@ -54,6 +54,7 @@
     "object-assign": "*"
   },
   "dependencies": {
+    "firebase": "^2.4.2",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.0",
