--- a/sticky-notes/.eslintrc
+++ b/sticky-notes/.eslintrc
@@ -6,6 +6,7 @@
   },
   "extends": "airbnb",
   "rules": {
-    "quotes": [2, "single"]
+    "quotes": [2, "single"],
+    "no-underscore-dangle": 0
   }
 }
