--- a/info-finder/package.json
+++ b/info-finder/package.json
@@ -57,6 +57,7 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.0",
-    "superagent": "*"
+    "superagent": "*",
+    "superagent-jsonp": "0.0.6"
   }
 }
