--- a/stock-client/package.json
+++ b/stock-client/package.json
@@ -54,6 +54,7 @@
     "object-assign": "*"
   },
   "dependencies": {
+    "chart.js": "^1.1.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.0",
